{
    "name": "InputController",
    "maps": [
        {
            "name": "Player",
            "id": "50dc9b53-fdfb-44b4-a7bb-4a010fb4f43a",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "ca8ee2d2-a319-4269-b7fb-7506981883ad",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "WASD Key",
                    "id": "2c653d6f-0a2a-462a-9a85-12e74193ce7e",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "b0de804f-f31a-4961-86ca-01dc2df3778f",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "8b912933-4463-42d6-90b0-88c26b1b472d",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "4c6d12fd-b1d6-43c1-82cf-ca67dfd25078",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "8355eb67-1afe-4943-ad54-13acb0670a6b",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}